Fixed: Pressing Clear in Record and Playback controls shouldn't pause the sim, see #2470
6/14/2010 Simplify defaults and bugfix in time speed slider
6/14/2010 Added the ability to remove the timeline node
6/13/2010 Update playback speed slider visibility on startup
6/13/2010 Relayout clock control panel when controls are added
6/13/2010 Layout improvements for RecordAndPlaybackControlPanel
6/11/2010 Fixed an index out of bounds exception on clear during playback; only restore state if state has been recorded
6/10/2010 Made timeline thumb node remain close to mouse, even after hitting boundary
6/10/2010 Converted RecordAndPlaybackModel to use time parameter instead of playback indices
6/10/2010 Fixed: Record and playback timeline doesn't synchronize size at the right time (seems one behind); When switching back and forth tabs in moving man, the playback timeline changes size.
5/31/2010 Fixed a bug that caused charts in motion-series only to clear after clearing the model twice.
5/17/2010 document public API, refactor, simplify constructor
5/13/2010 Started initial port of recording-and-playback system from trunk/simulations-java/common/scala-common/scala-src/edu/colorado/phet/scalacommon/record, see #2092