@@ -1,3 +1,4 @@
+Refactored RecordAndPlaybackModel for improved extensibility
 Fixed: Pressing Clear in Record and Playback controls shouldn't pause the sim, see #2470
 6/14/2010 Simplify defaults and bugfix in time speed slider
 6/14/2010 Added the ability to remove the timeline node
